# django-test

./: .coverage  .env.sample  .flake8  .gitignore  Dockerfile  Dockerfile-dev-local-env  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
app/: db.sqlite3
app/core_app/: admin.py  models.py
app/core_app/api/: routers.py  serializers.py  urls.py  views.py
app/core_app/migrations/: 0001_initial.py
app/main_project/: settings.py  urls.py
htmlcov/: d_135ae9bbedd7a6cd_routers_py.html  d_135ae9bbedd7a6cd_serializers_py.html  d_135ae9bbedd7a6cd_urls_py.html  d_135ae9bbedd7a6cd_views_py.html  d_15eec17ade2d798f___init___py.html  d_15eec17ade2d798f_settings_py.html  d_15eec17ade2d798f_urls_py.html  d_8dc56d0ea89c2b22_atendee_py.html  d_8dc56d0ea89c2b22_event_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_models_py.html  d_a44f0ac069e85531_test_restAPI_py.html  d_af9f624adbd6536d_0001_initial_py.html  d_af9f624adbd6536d___init___py.html  d_dc3d621b7e4afcc8___init___py.html  d_dc3d621b7e4afcc8_admin_py.html  d_dc3d621b7e4afcc8_apps_py.html  d_dc3d621b7e4afcc8_models_py.html  index.html  status.json
tests/: conftest.py  test_models.py  test_restAPI.py
